--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ packages = [{include = "markov_chain", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 numpy = "^1.24.3"
-matplotlib = "^3.7.1"
+streamlit = "^1.23.1"
+plotly = "^5.15.0"
 
 
 [build-system]
